src/objects/saTelemarketingReply__c.object
<CustomObject>
    <fields>
        <fullName>AffiliationCode__c</fullName>
        <label>加入者コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentCode__c</fullName>
        <label>応対内容コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthForSearch__c</fullName>
        <label>検索用年月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>saTelemarketing__c</referenceTo>
        <relationshipLabel>saTelemarketingReply</relationshipLabel>
        <relationshipName>saTelemarketingReply</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReceptionDate__c</fullName>
        <label>受付年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceptionDatetime__c</fullName>
        <label>受付日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>応対内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusInt__c</fullName>
        <formula>VALUE(RIGHT(TEXT(Status__c), LEN(TEXT(Status__c)) - 1))</formula>
        <label>StatusInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusShortLabel__c</fullName>
        <formula>CASE(Status__c, 
&quot;T0&quot;, &quot;１回目不出：架電中&quot;, 
&quot;T2&quot;, &quot;２回目不出：架電中&quot;, 
&quot;T3&quot;, &quot;３回目不出：不出完了&quot;, 
&quot;T4&quot;, &quot;聴取不可完了&quot;, 
&quot;T5&quot;, &quot;聴取完了&quot;, 
&quot;T6&quot;, &quot;架電せず&quot;, 
&quot;T7&quot;, &quot;反響入電&quot;, 
TEXT(Status__c))</formula>
        <label>StatusShortLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>対応結果コード</label>
        <picklist>
            <picklistValues>
                <fullName>T0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>saTelemarketingReply</label>
    <nameField>
        <displayFormat>TLMR-{00000000}</displayFormat>
        <label>saTelemarketingReply Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>